overflow fixed
fixed overflow problem of 'background' class

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header>div{
     position: relative;
     top: 3.5rem;
     height: 10rem;
+    overflow: hidden;
 }
 .name{
     position: relative;
